--- a/debug_linux_kernel/style/openocd-from-scratch.css
+++ b/debug_linux_kernel/style/openocd-from-scratch.css
@@ -1,6 +1,7 @@
 body{
 	width:80%;
 	margin:auto;
+	font-size:120%;
 }
 
 header h1{
@@ -22,6 +23,7 @@ th, td {
 }
 
 canvas{
+	background-color:rgba(255,255,0,0.3);
 	margin : 40px;
 }
 
@@ -40,6 +42,7 @@ select,button {
 	border: 1px solid #ccc;
 	border-radius: 4px;
 	box-sizing: border-box;
+	font-size:150%;
 }
 button:hover, input[type=radio],select:hover{
 	cursor:pointer;			
